[gd_scene load_steps=18 format=3 uid="uid://3ioo106b4s3t"]

[ext_resource type="Script" path="res://src/player.gd" id="1_y6c8a"]
[ext_resource type="Script" path="res://src/inventory_data_equip.gd" id="2_21kj1"]
[ext_resource type="Script" path="res://src/inventory_data.gd" id="3_70ovs"]
[ext_resource type="Script" path="res://src/player_data.gd" id="4_1he0a"]
[ext_resource type="Script" path="res://src/stats.gd" id="5_krtft"]
[ext_resource type="Script" path="res://src/interact_ray.gd" id="6_fngg7"]
[ext_resource type="Script" path="res://src/state_machine.gd" id="7_c2tya"]

[sub_resource type="Resource" id="Resource_5x863"]
script = ExtResource("2_21kj1")
stacks = Array[Resource("res://src/item_stack.gd")]([null])

[sub_resource type="Resource" id="Resource_l88b5"]
script = ExtResource("3_70ovs")
stacks = Array[Resource("res://src/item_stack.gd")]([null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])

[sub_resource type="Resource" id="Resource_0i6bh"]
script = ExtResource("5_krtft")
health = 100
health_max = 100
health_regen = 0
stamina = 100
stamina_max = 100
stamina_regen = 0
mana = 100
mana_max = 100
mana_regen = 0
attack = 1
defense = 1
speed = 1

[sub_resource type="Resource" id="Resource_dvpc8"]
script = ExtResource("4_1he0a")
guid = "Player_New"
name = "New Player"
index = 0
position = Vector3(0, 0, 0)
direction = Vector3(0, 0, -1)
cell_name = ""
stats = SubResource("Resource_0i6bh")
inventory = SubResource("Resource_l88b5")
equip = SubResource("Resource_5x863")

[sub_resource type="AnimationRootNode" id="AnimationRootNode_8pgnw"]

[sub_resource type="SphereShape3D" id="SphereShape3D_oi3bu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mvv3f"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_726kc"]
material = SubResource("StandardMaterial3D_mvv3f")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hqt4h"]
transparency = 1
albedo_color = Color(0.8, 0.8, 0, 0.0941176)

[sub_resource type="BoxMesh" id="BoxMesh_24owg"]
material = SubResource("StandardMaterial3D_hqt4h")
size = Vector3(1, 0.02, 1)

[node name="Player" type="CharacterBody3D" groups=["load", "save"]]
collision_layer = 2
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_y6c8a")
data = SubResource("Resource_dvpc8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationRootNode_8pgnw")
anim_player = NodePath("../AnimationPlayer")

[node name="CameraPivotY" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CameraPivotX" type="SpringArm3D" parent="CameraPivotY"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
spring_length = 10.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CameraPivotY/CameraPivotX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_oi3bu")

[node name="InteractRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -1.5)
collision_mask = 4
script = ExtResource("6_fngg7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_726kc")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("7_c2tya")

[node name="TargetMarker" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_24owg")
